--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,20 @@ body{
     max-height: fit-content;
 }
 
+#main{
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
 h4{
     padding: 15px 0 0 10px;
+}
+
+textarea{
+    padding-top: 8px;
+    border-color: #d5d2d2;
+}
+
+.sticky-footer{
+    margin-top:auto;
 }
